add_subdirectory(ctaux)
add_subdirectory(exact_diagonalization_advanced)
add_subdirectory(fourier_transform)
add_subdirectory(interpolation)
add_subdirectory(phys/lattice_mapping)
add_subdirectory(math/statistical_testing)
add_subdirectory(nfft)
add_subdirectory(statistical_tests/real_materials)
add_subdirectory(statistical_tests/square_lattice)
add_subdirectory(stdthread_qmci)
