add_subdirectory(coarsegraining)
add_subdirectory(cluster_solver)
add_subdirectory(exact_diagonalization_advanced)
add_subdirectory(fourier_transform)
add_subdirectory(interpolation)
add_subdirectory(phys/lattice_mapping)
add_subdirectory(math/statistical_testing)
add_subdirectory(nfft)
add_subdirectory(parallel/mpi_concurrency)
add_subdirectory(statistical_tests/real_materials)
add_subdirectory(statistical_tests/square_lattice)
