add_subdirectory(concurrency)
add_subdirectory(function/domains)
add_subdirectory(math/geometry/gaussian_quadrature)
add_subdirectory(math/random)
add_subdirectory(phys_library/DCA_step/cluster_solver/posix_qmci)
add_subdirectory(phys/domains/cluster)
add_subdirectory(phys/parameters/mci_parameters)
add_subdirectory(util)
